2014-10-29  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::rspRemoveMatchpoint): Ensure
	breakpoints are set in all threads.
	(GdbServer::rspInsertMatchpoint): Likewise.
	* src/TargetControl.h: Add isLocalAddr () as public pure virtual
	method.
	* src/TargetControlHardware.cpp
	(TargetControlHardware::isLocalAddr): Created.
	(TargetControlHardware::convertAddress): Use isLocalAddr.
	* src/TargetControlHardware.h: Add isLocalAddr () as public
	method.

2014-10-24  Ola Jeppsson  <ola@adapteva.com>

	* src/main.cpp (getDefaultHdfFile):
	New function. Use path relative to the e-server binary to determine
	default XML HDF file path.
	(main): Get default HDF file from getDefaultHdfFile() if user did not
	explicitly specify it with "-hdf".

2014-10-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* e-server.sh: Remove environment variable dependencies in a
	movable way.

2014-10-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Remove assertion side effects and document reversions.

	* e-server.sh: Don't use sudo.
	* src/GdbServer.cpp (GdbServer::initProcesses):
	Remove side-effects from assert.
	(GdbServer::rspQuery): Ignore qNonStop packets.
	(GdbServer::rspCmdWorkgroup): Ignore qNonStop packets.  Remove
	side-effects from assert.
	(GdbServer::getThread): Better error message.
	(GdbServer::stopAttachedProcesses): Deleted.
	* src/GdbServer.h: Remove stopAttachedProcesses.  Add
	voidprintfWrapper.
	* src/ProcessInfo.cpp:
	(ProcessInfo::numThreads): Created.
	* src/ProcessInfo.h: Add numThreads.
	* src/ServerInfo.cpp (ServerInfo::chipVersion): Deleted.
	* src/ServerInfo.h: Remove chipVersion.
	* src/TargetControlHardware.cpp
	(TargetControlHardware::readMem): Remove routine warning.
	(TargetControlHardware::writeMem): Likewise.
	(TargetControlHardware::initHwPlatform): Correct return from signal.
	* src/Thread.cpp (Thread::readMem32): Better error
	message.
	(Thread::readMem16): Likewise.
	(Thread::readMem8): Likewise.