@@ -328,6 +328,9 @@ private:
   //! Wrapper to avoid external memory problems.
   void printfWrapper (char *result_str, const char *fmt, const char *args_buf);
 
+  //! Non-stop support
+  void  stopAttachedProcesses ();
+
   //! Extraction opcode fields.
   uint32_t  getOpcode1_4 (uint32_t  instr);
   uint32_t  getOpcode1_5 (uint32_t  instr);
